[gd_scene load_steps=5 format=3 uid="uid://s8ws3ocsofll"]

[ext_resource type="Script" uid="uid://cr0ld030fqmh8" path="res://Shop/ShopRestockSystem.gd" id="1_m4aye"]
[ext_resource type="Script" uid="uid://i11lkvdwa0ms" path="res://Shop/GameManager.gd" id="1_skox4"]
[ext_resource type="Script" uid="uid://07avvaxpb2xt" path="res://Shop/ProblemGenerator.gd" id="2_c2fyr"]
[ext_resource type="Script" uid="uid://csiirhl08dyll" path="res://Shop/SimpleUi.gd" id="4_xxwuv"]

[node name="ShopScene" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="ShopRestockSystem" type="Node" parent="."]
script = ExtResource("1_m4aye")

[node name="ProblemGenerator" type="Control" parent="."]
anchors_preset = 0
script = ExtResource("2_c2fyr")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_skox4")

[node name="UI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_xxwuv")

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 50.0
text = "Welcome to the Math Shop"

[node name="TimerLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = 180.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Restock Timer"

[node name="ManualRestock" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 266.0
offset_top = 16.0
offset_right = 376.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Manual Restock"

[node name="AdditionSection" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 170.0
offset_bottom = 200.0
theme_override_constants/separation = 10

[node name="ItemLabel" type="Label" parent="UI/AdditionSection"]
layout_mode = 2
text = "Addition\\nCommon 
• Stock: 0"

[node name="BuyButton" type="Button" parent="UI/AdditionSection"]
layout_mode = 2
text = "Buy Addition"

[node name="SubtractionSection" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 190.0
offset_top = 100.0
offset_right = 340.0
offset_bottom = 200.0
theme_override_constants/separation = 10

[node name="ItemLabel" type="Label" parent="UI/SubtractionSection"]
layout_mode = 2
text = "Subtraction\\nCommon 
• Stock: 0"

[node name="BuyButton" type="Button" parent="UI/SubtractionSection"]
layout_mode = 2
text = "Buy Subtraction"

[node name="MultiplicationSection" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 360.0
offset_top = 100.0
offset_right = 510.0
offset_bottom = 200.0
theme_override_constants/separation = 10

[node name="ItemLabel" type="Label" parent="UI/MultiplicationSection"]
layout_mode = 2
text = "Multiplication\\nUncommon 
• Stock: 0"

[node name="BuyButton" type="Button" parent="UI/MultiplicationSection"]
layout_mode = 2
text = "Buy Multiplication"

[node name="DivisionSection" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 220.0
offset_right = 170.0
offset_bottom = 320.0
theme_override_constants/separation = 10

[node name="ItemLabel" type="Label" parent="UI/DivisionSection"]
layout_mode = 2
text = "Division\\nUncommon 
• Stock: 0"

[node name="BuyButton" type="Button" parent="UI/DivisionSection"]
layout_mode = 2
text = "Buy Division"

[node name="PolynomialsSection" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 190.0
offset_top = 220.0
offset_right = 340.0
offset_bottom = 320.0
theme_override_constants/separation = 10

[node name="ItemLabel" type="Label" parent="UI/PolynomialsSection"]
layout_mode = 2
text = "Polynomials\\nRare 
• Stock: 0"

[node name="BuyPolynomialButton" type="Button" parent="UI/PolynomialsSection"]
layout_mode = 2
text = "Buy Polynomial"

[connection signal="pressed" from="UI/ManualRestock" to="GameManager" method="test_manual_restock"]
[connection signal="pressed" from="UI/AdditionSection/BuyButton" to="GameManager" method="test_buy_addition"]
[connection signal="pressed" from="UI/SubtractionSection/BuyButton" to="GameManager" method="test_buy_subtraction"]
[connection signal="pressed" from="UI/MultiplicationSection/BuyButton" to="GameManager" method="test_buy_multiplication"]
[connection signal="pressed" from="UI/DivisionSection/BuyButton" to="GameManager" method="test_buy_division"]
[connection signal="pressed" from="UI/PolynomialsSection/BuyPolynomialButton" to="GameManager" method="test_buy_polynomials"]
